--- a/maintenance-mode.html
+++ b/maintenance-mode.html
@@ -4,7 +4,7 @@
 <meta content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no"
       name="viewport">
 <title>Техническое обслуживание | Студия Фьюжн</title>
-<link rel="shortcut icon" type="image/x-icon" href="../favicon.ico">
+<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 <link rel="stylesheet" href="style.css">
 <base target="_parent"/>
 <div class="message">
