application-error: added a link to the homepage in the logo element

--- a/application-error.html
+++ b/application-error.html
@@ -8,7 +8,9 @@
 <link rel="stylesheet" href="style.css">
 <base target="_parent"/>
 <div class="message">
-  <img class="logo" src="FusionLogo_small_white.png" alt="Fusion studio" width="120">
+  <a href="https://fusion1905.ru" class="logo">
+    <img src="FusionLogo_small_white.png" alt="Fusion studio" width="120">
+  </a>
   <div class="message__title">Ошибка</div>
   <p>В приложении возникла ошибка и ваш запрос не может быть обработан.</p>
   <p>Пожалуйста, повторите попытку позже.</p>
