Hidden links to banned social networks

--- a/maintenance-mode.html
+++ b/maintenance-mode.html
@@ -18,14 +18,14 @@
      rel="external"
      target="_blank"
      title="Сообщество музыкантов"><span class="fab fa-vk"></span></a>
-  <a href="https://www.facebook.com/fusion1905"
+  <!--<a href="https://www.facebook.com/fusion1905"
      rel="external"
      target="_blank"
-     title="Фейсбук"><span class="fab fa-facebook-f"></span></a>
-  <a href="https://www.instagram.com/fusionstudio1905"
+     title="Фейсбук"><span class="fab fa-facebook-f"></span></a>-->
+  <!--<a href="https://www.instagram.com/fusionstudio1905"
      rel="external"
      target="_blank"
-     title="Жизнь студии"><span class="fab fa-instagram"></span></a>
+     title="Жизнь студии"><span class="fab fa-instagram"></span></a>-->
 </div>
 <script src="https://kit.fontawesome.com/8f117a1360.js"
         integrity="sha384-WrOmEeLA7AEpNGTM8xtfVE6+neUNzbKVmuw9lKcmTTlLW69VH1K9bnKLiAaJq7fG"
